# Modeling_domain_wall_network

./: cropsample_fig2_figS1a.sh  fig6c_figS1b.sh  generate_voronoi_samples.sh  readme.md  requirements.txt  run_geneticoptimization.sh  srun_geneticoptimization.sh
neuromorphic_materials/: Fig1_spectral_entropy_illustration.py
neuromorphic_materials/graph_annotation/: annotate_edges  annotate_nodes  annotation_to_graph.py  crop_sample.py  node_image_to_json.py  readme.md  requirements.txt
neuromorphic_materials/graph_scripts/: create_dataset.py  make_plots.py  pruned_graph.py  readme.md  run_angle_extraction_tests.py  run_build_graph_slic.sh  run_build_graph_squares.sh  run_segmentation_slic.sh  run_segmentation_squares.sh  segmentation.py  test_angle_extraction.py
neuromorphic_materials/graph_similarity/: networkqit_patch.md  spectral_entropy.py  visualize_graph.py
neuromorphic_materials/graph_stat_analysis/: FigS5_spectral_analysis_compare_random_grid_netw.py  degree_figures_compare.py  readme.md  role_of_dataset_size.py  spectral_analysis_compare.py
neuromorphic_materials/junction_graph_extraction/: compile_beyond_ocr.py  extract_graph_voronoi.py
neuromorphic_materials/junction_graph_extraction/beyondOCR_junclets/: CMakeLists.txt  a.out  ahhh.ppm  beyondOCR_junclets  beyondOCR_junclets.cpp  binary.ppm  dflBinarylib.cpp  dflBinarylib.h  dflJuncletslib.cpp  dflJuncletslib.h  dflPenWidth.cpp  dflPenWidth.h  dflUtils.cpp  dflUtils.h  firma.ppm  handwritten.ppm  my_junc  nms.h
neuromorphic_materials/sample_generation/: Voronoi_generation_pseudocode.txt  (+6 more)
(+1149 files in other folders)
